# agentic-readiness-audit

./: .python-gitlab.cfg  CLAUDE.md  README.md  main.py  pyproject.toml  renovate.json  requirements.txt
agentic_readiness_audit/: env.py  gitlab.py  logging.py
claude_md_audit/: argparse.py  gitlab.py  logging.py  logging_cli_formatter.py  summary.py
llm/mr-descriptions/: initial-commit.md
tests/: conftest.py
tests/integration/: conftest.py  test_gitlab_live.py
tests/unit/: test_argparse.py  test_gitlab.py  test_main.py  test_summary.py  test_test_maturity.py
