[project]
name = "claude-md-audit"
version = "0.1.0"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.4",
]

[tool.setuptools.packages.find]
include = ["claude_md_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require GITLAB_TOKEN and live API access",
]
